--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    width: 100vw;
+    width: 99vw;
     height: 100vh;
 
     background-color: var(--color-grey-2);
